--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-    background-color: #F0F6F6;
+    background-color: #D9D9D9;
 }
 
 .borda {
@@ -13,7 +13,8 @@ body {
 }
 
 .nav-color {
-    background-color: #082C4D
+    background-color: #07213a;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.466);
 }
 
 .nav-link {
@@ -24,8 +25,21 @@ body {
     color: #c6c7c9;
 }
 
-.footer-color {
-    background-color: #082C4D;
+.hover-option:hover {
+    background-color: #092744;
+}
+
+/* .footer-color {
+    background-color: #09335a;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.384);
+} */
+
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 24rem;
+    padding-top: 2rem;
 }
 
 ::-webkit-scrollbar {
