--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,24 @@
 
 body {
     background-color: #D9D9D9;
+    margin: 0;
+    padding: 0;
+}
+
+.sidebar {
+    height: 100vh;
 }
 
 .borda {
     border-right: 1px solid rgba(255, 255, 255, 0.445);
+}
+
+.button-color {
+    background-color: #07213a;
+}
+
+.button-color:hover {
+    background-color: #0e3357;
 }
 
 .nav-link {
@@ -34,13 +48,11 @@ body {
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.384);
 } */
 
-.title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 24rem;
-    padding-top: 2rem;
+.copy {
+    margin-left: 16rem;
+    margin-right: 1rem;
 }
+
 
 ::-webkit-scrollbar {
     width: 0;
