--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,21 @@
 @charset "UTF-8";
 
 body {
-    background-color: #D9D9D9;
+    background-color: #e4e3e3;
     margin: 0;
     padding: 0;
 }
 
-.sidebar {
-    height: 100vh;
+.font-card {
+    font-size: 1.3em;
 }
 
-.borda {
-    border-right: 1px solid rgba(255, 255, 255, 0.445);
+.font-list {
+    font-size: 1em;
+}
+
+.sidebar {
+    height: 100vh;
 }
 
 .button-color {
@@ -20,10 +24,6 @@ body {
 
 .button-color:hover {
     background-color: #0e3357;
-}
-
-.nav-link {
-    margin-right: 15px;
 }
 
 .nav-color {
@@ -35,25 +35,24 @@ body {
     color: #F8F9FA;
 }
 
-.nav-link:hover {
-    color: #c6c7c9;
-}
-
 .hover-option:hover {
     background-color: #092744;
 }
 
-/* .footer-color {
-    background-color: #09335a;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.384);
-} */
-
-.copy {
-    margin-left: 16rem;
-    margin-right: 1rem;
-}
-
-
 ::-webkit-scrollbar {
     width: 0;
+}
+
+dialog::backdrop {
+    background-color: rgb(0 0 0 / .5);
+}
+
+dialog {
+    background-image: linear-gradient(#E1D9E5, #BCB5BF);
+
+    border: none;
+    box-shadow: 0 0 1em rgb( 0 0 0 / .3);
+
+    padding-left: 5rem;
+    padding-right: 5rem;
 }
