--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 body {
     background-color: #e4e3e3;
     margin: 0;
@@ -26,6 +27,10 @@ body {
     background-color: #0e3357;
 }
 
+.thead-color {
+    background-color: #07213a;
+}
+
 .nav-color {
     background-color: #07213a;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.466);
@@ -48,7 +53,7 @@ dialog::backdrop {
 }
 
 dialog {
-    background-image: linear-gradient(#E1D9E5, #BCB5BF);
+    background-image: linear-gradient(#e4e3e3, #eeebeb);
 
     border: none;
     box-shadow: 0 0 1em rgb( 0 0 0 / .3);
