--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
-
+/* #e4e3e3,  */
 body {
-    background-color: #e4e3e3;
+    background-color: #d8d7d7;
     margin: 0;
     padding: 0;
 }
