--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,26 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap');
 
 /* #e4e3e3,  */
 body {
     background-color: #d8d7d7;
     margin: 0;
     padding: 0;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+}
+
+main {
+    margin-bottom: 3em;
 }
 
 .font-card {
     font-size: 1.3em;
+}
+
+.font-right {
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .font-list {
