--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
     text-decoration: none;
 }
 
+.bg-dashboard {
+    background-color: #a5a8ac96;
+}
+
 body {
     background-color: #eeeded;
     margin: 0;
